added procfile and pg gem for heroku deploy

--- a/config/database.yml
+++ b/config/database.yml
@@ -47,8 +47,14 @@ test:
 #   production:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
+
 production:
   <<: *default
   database: FoodTrucks_production
   username: FoodTrucks
+  adapter: postgresql
+  encoding: unicode
+  # For details on connection pooling, see Rails configuration guide
+  # http://guides.rubyonrails.org/configuring.html#database-pooling
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   password: <%= ENV['FOODTRUCKS_DATABASE_PASSWORD'] %>
